2006-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, common-src/amanda.h,
	  common-src/bsd-security.c, common-src/bsdtcp-security.c,
	  common-src/bsdudp-security.c, common-src/dgram.c,
	  common-src/dgram.h, common-src/krb4-security.c,
	  common-src/krb5-security.c, common-src/security-util.c,
	  common-src/security-util.h, common-src/stream.c,
	  common-src/util.c, common-src/util.h,
	  restore-src/amidxtaped.c, server-src/amindexd.c: IPV6.

2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c, oldrecover-src/display_commands.c,
	  oldrecover-src/extract_list.c, recover-src/display_commands.c,
	  recover-src/extract_list.c,
	  server-src/driver.c: Fix compiler error.

2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Open the amandates file after the
				 <config>/amanda-client.conf file is loaded.

2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Fix compiler error on boris.
	* server-src/driver.c: Fix compiler error on rocky.

2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c, server-src/amcheck.c,
	* server-src/driver.c, server-src/dumper.c,
	* server-src/planner.c, tape-src/output-file.c: Lint cleanup.

2006-11-20  Ian Turner <ian@zmanda.com>
	* tape-src/output-file.c: Fix a compilation error related to
	  improper type casts. Thanks to Satya Ganga for noticing this
	  problem.

2006-11-20  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Use temporary variable to scanf an OFF_T_FMT.
	* server-src/planner.c: Use temporary variable to scanf an OFF_T_FMT.

2006-11-13  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Work for estimate calcsize and
				  program "DUMP".

2006-11-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Don't ouput an warning if holdingdisk 'use'
				is set to 0.

2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>